# rust-rssreader

./: Cargo.toml
src/: db.rs  lib.rs  main.rs  models.rs  rss_parser.rs
static/: bower.json  gulpfile.js  package.json
static/app/: index.html
static/app/scripts/: actions.js  app.js  constants.js
static/app/scripts/components/: application.js  feed_list.js  post_list.js
static/app/scripts/stores/: feed_store.js
static/app/styles/: _settings.scss  main.scss
