[package]
name = "rssreader"
version = "0.1.0"
authors = ["Sindre Johansen <sindre@sindrejohansen.no>"]

[dependencies]
hyper = "*"
xml-rs = "*"
itertools = "*"
postgres_macros = "*"
iron = "*"
router = "*"
serde = "*"
serde_macros = "*"
mount = "*"
staticfile = "*"
time = "*"
log = "0.3.1"

[dependencies.postgres]
version = "*"
features = ["unix_socket"]
